--- a/gatsby-theme-code-notes/package.json
+++ b/gatsby-theme-code-notes/package.json
@@ -57,6 +57,8 @@
     "gatsby-plugin-sharp": "^2.6.39",
     "gatsby-plugin-theme-ui": "0.4.0-rc.5",
     "gatsby-plugin-typescript": "^2.4.21",
+    "gatsby-plugin-manifest": "^3.3.0",
+    "gatsby-plugin-offline": "^4.3.0",
     "gatsby-remark-images": "^3.3.33",
     "gatsby-source-filesystem": "^2.3.34",
     "gatsby-transformer-sharp": "^2.5.17",
